--- a/src/styles.scss
+++ b/src/styles.scss
@@ -9,4 +9,4 @@
 // @import '@angular/cdk/overlay-prebuilt.css';
 /* Importing Bootstrap SCSS file. */
 // @import 'bootstrap/scss/bootstrap';
-@import url("https://cdn.jsdelivr.net/npm/bootstrap-icons@1.3.0/font/bootstrap-icons.css");
+@import "../node_modules/bootstrap-icons/font/bootstrap-icons.scss"
