--- a/src/app/core/navbar/header/header.component.html
+++ b/src/app/core/navbar/header/header.component.html
@@ -1,37 +1,40 @@
-<nav class="navbar navbar-expand-lg bg-white shadow-sm">
-    <div class="container-fluid" style="margin-left: 80px; margin-right: 80px;">
+<nav class="navbar  bg-white shadow-sm">
+    <div class="container-fluid main-wrapper " >
         <div class="d-flex justify-content-between align-items-center w-100">
             <!-- brand logo -->
-            <a href="" class="d-flex align-items-center">
-                <img src="../../../../assets/images/1rhythmlogo.png" alt="" >
+            <a href="" class="d-flex align-items-center logo">
+                <img src="../../../../assets/images/1rhythmlogo.png" alt="">
                 <span class="fs-4 fw-semibold text-dark ms-2 mb-0 logo-text ">1Rhythm</span>
             </a>
-            
+
             <!-- navbar -->
-            <div class="menu" >
+            <div class="menu d-md-flex d-xs-none">
                 <ul class="nav  ">
                     <li class="nav-item">
                         <a href="" class="nav-link d-flex align-items-center">
                             <!-- <img src="../../../../assets/images/home.svg" alt="" class="me-2 header-icon"> -->
-                            <span class="bi bi-0-circle-fill"></span>
+                            <span class="bi bi-house-door me-2"></span>
                             <span class="nav-text ">Home</span>
                         </a>
                     </li>
                     <li class="nav-item ">
                         <a href="" class="nav-link d-flex align-items-center ">
-                            <img src="../../../../assets/images/Studio.svg" alt="" class="me-2 header-icon">
+                            <!-- <img src="../../../../assets/images/Studio.svg" alt="" class="me-2 header-icon"> -->
+                            <span class="bi bi-vinyl me-2"></span>
                             <span class="nav-text">Studio</span>
                         </a>
                     </li>
                     <li class="nav-item ">
                         <a href="" class="nav-link d-flex align-items-center ">
-                            <img src="../../../../assets/images/artist.svg" alt="" class="me-2 header-icon">
+                            <!-- <img src="../../../../assets/images/artist.svg" alt="" class="me-2 header-icon"> -->
+                            <span class="bi bi-person me-2"></span>
                             <span class="nav-text">Artists</span>
                         </a>
                     </li>
                     <li class="nav-item ">
                         <a href="" class="nav-link d-flex align-items-center ">
-                            <img src="../../../../assets/images/calender.svg" alt="" class="me-2 header-icon">
+                            <!-- <img src="../../../../assets/images/calender.svg" alt="" class="me-2 header-icon"> -->
+                            <span class="bi bi-calendar me-2"></span>
                             <span class="nav-text">Booking History</span>
                         </a>
                     </li>
@@ -42,23 +45,32 @@
                 <!-- <button type="button" class="btn btn-outline-primary" >
                     Toggle dropdown
                 </button> -->
-                <div class="rounded-circle image overflow-hidden " type="button" id="dropdownBasic1" ngbDropdownToggle>
+                <div class="rounded-circle image overflow-hidden " type="button" id="manageProfileDropdown"
+                    ngbDropdownToggle>
                     <img src="../../../../assets/images/marco-bicca-Z8Rf8EVS2Wc-unsplash 1.png"
                         class=" img-fluid image " alt="">
                 </div>
-                <div ngbDropdownMenu aria-labelledby="dropdownBasic1" class="py-0  overflow-hidden">
-                    <div class="d-flex align-items-center justify-content-between" ngbDropdownItem>
-                        <button ngbDropdownItem class="py-0 px-0">Available </button>
-                        <div class="form-check form-switch ">
-                            <input class="form-check-input me-0 " type="checkbox" role="switch" id="flexSwitchCheckChecked"
-                                checked ngbDropdownItem>
+                <div class="border-0 shadow-sm" ngbDropdownMenu aria-labelledby="manageProfileDropdown">
+                    <li class="item px-3 py-1">
+                        <div class="form-switch p-0 d-flex align-items-center justify-content-between">
+                            <label class="form-check-label cursor-pointer"
+                                for="flexSwitchCheckDefault">Available</label>
+                            <input class="form-check-input m-0" type="checkbox" role="switch"
+                                id="flexSwitchCheckDefault">
                         </div>
-                    </div>
-                    <button ngbDropdownItem>Manage Profile</button>
-                    <button ngbDropdownItem>Manage Studio Profile</button>
-                    <button ngbDropdownItem>Log Out</button>
+                    </li>
+                    <li class="item px-3 py-1">
+                        Manage Profile
+                    </li>
+
+                    <li class="item px-3 py-1">
+                        Manage Studio Profile
+                    </li>
+                    <li class="item px-3 py-1">Log Out</li>
                 </div>
             </div>
+
         </div>
+
     </div>
 </nav>
