--- a/src/app/core/navbar/header/header.component.scss
+++ b/src/app/core/navbar/header/header.component.scss
@@ -1,42 +1,59 @@
-.image{
-    height: 40px;
-    width: 40px;
-}
-.header-icon{
-    height: 16px;
+.image {
+  height: 40px;
+  width: 40px;
 }
 
-  .menu {
-    transition: 0.2s ease-in-out;
-  }
-  .menu ul {
-    padding: 0;
+.header-icon {
+  height: 16px;
+}
+
+.menu {
+  transition: 0.2s ease-in-out;
+}
+
+.menu ul {
+  padding: 0;
+  margin: 0;
+}
+
+.menu ul li {
+  list-style-type: none;
+  display: inline-block;
+  margin-left: 24px;
+}
+
+.main-wrapper {
+  margin-right: 80px;
+  margin-left: 80px;
+}
+
+@media (max-width: 576px) {
+
+  .menu ul li {
+    display: block;
+    text-align: center;
     margin: 0;
+    padding: 0;
+  }
+
+  // .main-wrapper {
+  //   margin-left: 0px;
+  //   margin-right: 0px;
+  // }
+
+  .nav-text {
+    display: none;
+  }
+}
+
+@media (max-width:768px) {
+  
+  .main-wrapper {
+    margin-left: 0px;
+    margin-right: 0px;
+   
   }
   .menu ul li {
-    list-style-type: none;
-    display: inline-block;
-    margin-left: 24px;
-  }
-  
-  @media (max-width: 575px) {
-    .menu {
-      position: fixed;
-      left: -220px;
-      top: 44px;
-      width: 220px;
-      height: 100%;
-      background-color: black;
-      z-index: 1000;
-    }
-    .menu ul li {
-      display: block;
-      text-align: left;
-      margin: 0;
-      padding: 10px 0 0 20px;
-      border-bottom: 1px solid white;
-    }
-
-  }
-  
-  
+    display: block;
+    text-align: center}
+}
