--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,58 +1,49 @@
-<!-- <div *ngFor="let artist of artistList;" class="card">
-    <img src="{{artist.image}}" class="card-img-top" alt="">
-    <div class="card-body">
-        <h5 class="card-title">{{artist.title}}</h5>
-        <p class="card-text">{{artist.description}}</p>
-    </div>
-    <a href="#" class="btn">View Details</a>
-</div> -->
-
-<div class="">
-    <ngb-carousel [showNavigationArrows]="false" class="carouselwrapper overflow-hidden" *ngIf="images">
-        <ng-template ngbSlide *ngFor="let event of lastFiveData">
-            <div class="picsum-img-wrapper">
-                <img class="w-100" src="{{event.img}}" alt="Random first slide" />
-            </div>
-            <div class="carousel-text-wrapper ">
-                <div class="carousel-text text-white">
-                    <h5>MOST POPULAR</h5>
-                    <span class="text-white crtext">CREATIVE SPACE </span> <span class="text-white crtext">STUDIO</span>
-                    <h4>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Distinctio minima dolorem ullam,
-                        officiis quibusdam libero magnam adipisci.</h4>
-                </div>
-            </div>
-        </ng-template>
-    </ngb-carousel>
-</div>
-<div class="w-100 row d-flex justify-content-between mt-4">
-    <div class="card col-sm-12 col-md-6 col-lg-6" style="width: 18rem;" *ngFor="let event of lastFiveData">
-        <div class="p-3 bg-light ">
-            <img src="{{event.img}}" class="card-img-top image-wrap w-100" alt="...">
-            <div class="card-body">
-                <h5 class="card-title">{{ event.eventLocation }}</h5>
-                <p>{{event.eventDescription}}</p>
-                <a href="#" class="btn btn-primary ">Go somewhere</a>
-            </div>
+<div class="main-wrapper overflow-auto h-100">
+    <div class="row gx-0">
+        <div class="col m-0">
+            <ngb-carousel [showNavigationArrows]="false" class="carouselwrapper overflow-hidden " *ngIf="images">
+                <ng-template ngbSlide *ngFor="let event of lastFiveData">
+                    <div class="picsum-img-wrapper">
+                        <img class="w-100" src="{{event.img}}" alt="Random first slide" />
+                    </div>
+                    <div class="carousel-text-wrapper ">
+                        <div class="carousel-text text-white">
+                            <h5>MOST POPULAR</h5>
+                            <span class="text-white crtext">CREATIVE SPACE </span> <span
+                                class="text-white crtext-role">STUDIO</span>
+                            <h4 class="text-truncate ">Lorem ipsum dolor, sit amet consectetur adipisicing
+                                elit.
+                                Distinctio minima dolorem
+                                ullam,
+                                officiis quibusdam libero magnam adipisci.</h4>
+                            <a href="#" class="btn btn-primary d-flex align-items-center justify-content-center">View
+                                Details</a>
+                        </div>
+                    </div>
+                </ng-template>
+            </ngb-carousel>
         </div>
     </div>
-</div>
-
-
-<div class="d-flex justify-content-between align-items-center">
-    <h4 class="mb-0 fw-semibold">Explore studios</h4>
-    <a href="" class="nav-link"><small class="text-primary fw-semibold">SEE ALL</small></a>
-</div>
-<div class="row mt-3">
-    <div class="col-12 col-sm-6 col-md-4 col-lg-3" *ngFor="let event of lastFiveData">
-        <div class="card border-0 shadow p-3">
-           <div class="shadow overflow-hidden rounded">
-            <img src="{{event.img}}" alt="Studio 1" class="img-fluid">
-           </div>
-            <div class="card-body p-0 pt-3">
-                <h5 class="card-title">{{event.eventLocation}}</h5>
-                <p class="card-text">{{event.eventDescription}}</p>
-                <a href="#" class="btn btn-outline-info d-block">View Details</a>
-            </div>
-        </div>
+ <!-- Explore Studio -->
+ <div class="Explore-studio row gx-0 d-flex justify-content-between">
+    <div class=" d-flex justify-content-between align-items-center">
+        <span class="explore-text text-nowrap">Explore Studio</span>
+        <span class="see-all-text text-primary text-nowrap">SEE ALL</span>
+    </div>
+    <div class="col-xxl-2 col-xl-3 col-lg-4 col-md-6  col-xs-12 cards" *ngFor="let event of [1,2,3,4,5]">
+        <app-card></app-card>
     </div>
 </div>
+<!-- Explore Artist -->
+<div class="Explore-studio row gx-0 d-flex justify-content-between">
+    <div class="d-flex justify-content-between align-items-center">
+        <span class="explore-text text-nowrap">Explore Studio</span>
+        <span class="see-all-text text-primary text-nowrap">SEE ALL</span>
+    </div>
+    <div class="col-xxl-2 col-xl-3 col-lg-4 col-md-6 col-xs-12 cards" *ngFor="let event of [1,2,3,4,5]">
+        <app-card></app-card>
+    </div>
+</div>
+</div>
+
+
