--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,7 +1,7 @@
 <div class="main-wrapper overflow-auto h-100">
     <div class="row gx-0">
-        <div class="col m-0">
-            <ngb-carousel [showNavigationArrows]="false" class="carouselwrapper overflow-hidden " *ngIf="images">
+        <div class="col">
+            <ngb-carousel class="col carouselwrapper overflow-hidden" [showNavigationArrows]="false" *ngIf="images">
                 <ng-template ngbSlide *ngFor="let event of lastFiveData">
                     <div class="picsum-img-wrapper">
                         <img class="w-100" src="{{event.img}}" alt="Random first slide" />
@@ -11,7 +11,7 @@
                             <h5>MOST POPULAR</h5>
                             <span class="text-white crtext">CREATIVE SPACE </span> <span
                                 class="text-white crtext-role">STUDIO</span>
-                            <h4 class="text-truncate ">Lorem ipsum dolor, sit amet consectetur adipisicing
+                            <h4 class="text-truncate description">Lorem ipsum dolor, sit amet consectetur adipisicing
                                 elit.
                                 Distinctio minima dolorem
                                 ullam,
@@ -25,25 +25,27 @@
         </div>
     </div>
  <!-- Explore Studio -->
- <div class="Explore-studio row gx-0 d-flex justify-content-between">
-    <div class=" d-flex justify-content-between align-items-center">
-        <span class="explore-text text-nowrap">Explore Studio</span>
-        <span class="see-all-text text-primary text-nowrap">SEE ALL</span>
-    </div>
-    <div class="col-xxl-2 col-xl-3 col-lg-4 col-md-6  col-xs-12 cards" *ngFor="let event of [1,2,3,4,5]">
-        <app-card></app-card>
-    </div>
-</div>
-<!-- Explore Artist -->
-<div class="Explore-studio row gx-0 d-flex justify-content-between">
+ <div class="card-title-wrapper row gx-0 d-flex justify-content-between">
     <div class="d-flex justify-content-between align-items-center">
         <span class="explore-text text-nowrap">Explore Studio</span>
         <span class="see-all-text text-primary text-nowrap">SEE ALL</span>
     </div>
-    <div class="col-xxl-2 col-xl-3 col-lg-4 col-md-6 col-xs-12 cards" *ngFor="let event of [1,2,3,4,5]">
+</div>
+<div class="Explore-studio row gx-0 d-flex justify-content-between">
+    <div class="col-xxl-2 col-xl-3 col-lg-6 col-md-6  col-xs-12 cards" *ngFor="let event of [1,2,3,4,5]">
+        <app-card></app-card>
+    </div>
+</div>
+<!-- Explore Artist -->
+<div class="card-title-wrapper row gx-0 d-flex justify-content-between">
+    <div class="d-flex justify-content-between align-items-center">
+        <span class="explore-text text-nowrap">Explore Artist</span>
+        <span class="see-all-text text-primary text-nowrap">SEE ALL</span>
+    </div>
+</div>
+<div class="Explore-studio row gx-0 d-flex justify-content-between">
+    <div class="col-xxl-2 col-xl-3 col-lg-6 col-md-6 col-xs-12 cards" *ngFor="let event of [1,2,3,4,5]">
         <app-card></app-card>
     </div>
 </div>
 </div>
-
-
