--- a/src/app/core/navbar/header/header.component.html
+++ b/src/app/core/navbar/header/header.component.html
@@ -1,5 +1,5 @@
 <nav class="navbar  bg-white shadow-sm fixed-top ">
-    <div class="container-fluid  ">
+    <div class="container">
         <div class="d-flex flex-wrap justify-content-between align-items-center w-100">
             <!-- brand logo -->
             <a href="" class="d-flex align-items-center logo">
@@ -45,12 +45,12 @@
                     </ul>
                 </div>
                 <!-- profile -->
-                <div class="d-flex">
-                    <div class="form-group has-search me-4 d-none">
+                <div class=" ">
+                    <!-- <div class="form-group has-search me-4 dropdown ">
                         <span class="bi bi-search form-control-feedback"></span>
                         <input type="text" class="form-control" placeholder="Search">
-                    </div>
-                    <div ngbDropdown display="dynamic" placement="bottom-end" class="d-inline-block">
+                    </div> -->
+                    <div ngbDropdown display="dynamic" placement="bottom-end" class="d-inline-block ">
                         <!-- <button type="button" class="btn btn-outline-primary" >
                         Toggle dropdown
                     </button> -->
@@ -59,7 +59,7 @@
                             <img src="../../../../assets/images/marco-bicca-Z8Rf8EVS2Wc-unsplash 1.png"
                                 class=" img-fluid image " alt="">
                         </div>
-                        <div class="border-0 shadow-sm" ngbDropdownMenu aria-labelledby="manageProfileDropdown">
+                        <div class="border-0 shadow-sm " ngbDropdownMenu aria-labelledby="manageProfileDropdown">
                             <li class="item px-3 py-1">
                                 <div class="form-switch p-0 d-flex align-items-center justify-content-between">
                                     <label class="form-check-label cursor-pointer"
