--- a/src/app/shared/card/card.component.html
+++ b/src/app/shared/card/card.component.html
@@ -1,13 +1,12 @@
-<div class="card ">
-    <div class="card-wrapper">
-        <div class="image-wrapper overflow-hidden">
-            <img src="../../../assets/images/Studio.png" alt="...">
-        </div>
-        <div class="card-body p-0">
-            <h5 class="card-title">Magical Studio</h5>
-            <p class="card-text mb-0">Some quick example text to build on the card title</p>
-            <a href="#" class="btn btn-outline-secondary d-flex align-items-center justify-content-center">View
-                Details</a>
-        </div>
+<div class="card p-3">
+    <div class="image-wrapper rounded overflow-hidden d-flex align-items-center justify-content-center mb-2">
+        <img src="{{data.img}}" alt="..." class="h-100">
+    </div>
+    <div class="card-body p-0">
+        <h5 class="mb-1">{{data.eventLocation}}</h5>
+        <p class="card-text mb-2 truncate-overflow">{{data.eventDescription}}
+            {{data.artistDescription}}</p>
+        <a href="#" class="btn btn-outline-secondary d-flex align-items-center justify-content-center">View
+            Details</a>
     </div>
 </div>
