--- a/src/app/core/navbar/header/header.component.html
+++ b/src/app/core/navbar/header/header.component.html
@@ -15,41 +15,42 @@
                 <div class="d-flex  mx-md-auto mx-0">
                     <ul class="nav flex-md-row flex-column ">
                         <li class="nav-item">
-                            <a href="" class="nav-link d-flex align-items-center">
-                                <!-- <img src="../../../../assets/images/home.svg" alt="" class="me-2 header-icon"> -->
-                                <span class="bi bi-house-door me-2"></span>
+                            <a href="" class="nav-link d-flex align-items-center active">
+                                <img src="../../../../assets/images/Vector.svg" alt="" class="me-2 header-icon ">
+                                <!-- <span class="bi bi-house-door me-2"></span> -->
                                 <span class="nav-text ">Home</span>
                             </a>
                         </li>
                         <li class="nav-item ">
                             <a href="" class="nav-link d-flex align-items-center ">
-                                <!-- <img src="../../../../assets/images/Studio.svg" alt="" class="me-2 header-icon"> -->
-                                <span class="bi bi-vinyl me-2"></span>
+                                <img src="../../../../assets/images/Vector (3).svg" alt="" class="me-2 header-icon " >
+                                <!-- <span class="bi bi-vinyl me-2"></span> -->
                                 <span class="nav-text">Studio</span>
                             </a>
                         </li>
                         <li class="nav-item ">
                             <a href="" class="nav-link d-flex align-items-center ">
-                                <!-- <img src="../../../../assets/images/artist.svg" alt="" class="me-2 header-icon"> -->
-                                <span class="bi bi-person me-2"></span>
+                                <img src="../../../../assets/images/Vector (1).svg" alt="" class="me-2 header-icon">
+                                <!-- <span class="bi bi-person me-2"></span> -->
                                 <span class="nav-text">Artists</span>
                             </a>
                         </li>
                         <li class="nav-item ">
                             <a href="" class="nav-link d-flex align-items-center ">
-                                <!-- <img src="../../../../assets/images/calender.svg" alt="" class="me-2 header-icon"> -->
-                                <span class="bi bi-calendar me-2"></span>
+                                <img src="../../../../assets/images/Vector (2).svg" alt="" class="me-2 header-icon">
+                                <!-- <span class="bi bi-calendar me-2"></span> -->
                                 <span class="nav-text">Booking History</span>
                             </a>
                         </li>
                     </ul>
                 </div>
                 <!-- profile -->
-                <div class=" ">
-                    <!-- <div class="form-group has-search me-4 dropdown ">
+                <div class=" d-flex " >
+                    <div class="form-group has-search me-4 dropdown ">
                         <span class="bi bi-search form-control-feedback"></span>
                         <input type="text" class="form-control" placeholder="Search">
-                    </div> -->
+                    </div>
+                    
                     <div ngbDropdown display="dynamic" placement="bottom-end" class="d-inline-block ">
                         <!-- <button type="button" class="btn btn-outline-primary" >
                         Toggle dropdown
@@ -60,6 +61,7 @@
                                 class=" img-fluid image " alt="">
                         </div>
                         <div class="border-0 shadow-sm " ngbDropdownMenu aria-labelledby="manageProfileDropdown">
+                            <li class="item px-3 py-1 ">Username</li>
                             <li class="item px-3 py-1">
                                 <div class="form-switch p-0 d-flex align-items-center justify-content-between">
                                     <label class="form-check-label cursor-pointer"
