--- a/src/assets/scss/layout/_home.scss
+++ b/src/assets/scss/layout/_home.scss
@@ -62,7 +62,7 @@
 
 .card-title-wrapper {
     background: linear-gradient(180deg, #F9F7F7 0%, rgba(249, 247, 247, 0) 100%);
-    padding: 0 80px;
+    padding: 0 0;
     margin-top: 40px;
 
     .explore-text {
