--- a/src/app/core/navbar/header/header.component.html
+++ b/src/app/core/navbar/header/header.component.html
@@ -15,7 +15,7 @@
                 <div class="d-flex  mx-md-auto mx-0">
                     <ul class="nav flex-md-row flex-column ">
                         <li class="nav-item">
-                            <a href="" class="nav-link d-flex align-items-center active">
+                            <a href="" class="nav-link d-flex align-items-center active" routerLink="home">
                                 <img src="../../../../assets/images/Vector.svg" alt="" class="me-2 header-icon ">
                                 <!-- <span class="bi bi-house-door me-2"></span> -->
                                 <span class="nav-text ">Home</span>
@@ -23,7 +23,7 @@
                         </li>
                         <li class="nav-item ">
                             <a href="" class="nav-link d-flex align-items-center ">
-                                <img src="../../../../assets/images/Vector (3).svg" alt="" class="me-2 header-icon " >
+                                <img src="../../../../assets/images/Vector (3).svg" alt="" class="me-2 header-icon ">
                                 <!-- <span class="bi bi-vinyl me-2"></span> -->
                                 <span class="nav-text">Studio</span>
                             </a>
@@ -45,12 +45,20 @@
                     </ul>
                 </div>
                 <!-- profile -->
-                <div class=" d-flex " >
-                    <div class="form-group has-search me-4 dropdown ">
+                <div class=" d-flex ">
+                    <div class="form-group has-search me-4 search">
+                        <input type="text"  placeholder="Search" class="ms-3 ">
+                        <span class="bi bi-search "></span>
+                    </div>
+                    <!-- <div class="form-group has-search me-4 dropdown ">
                         <span class="bi bi-search form-control-feedback"></span>
                         <input type="text" class="form-control" placeholder="Search">
-                    </div>
-                    
+                    </div> -->
+                    <!-- <div>
+                        <input type="text">
+                        <i class="fa fa-book"></i>
+                    </div> -->
+
                     <div ngbDropdown display="dynamic" placement="bottom-end" class="d-inline-block ">
                         <!-- <button type="button" class="btn btn-outline-primary" >
                         Toggle dropdown
