--- a/src/assets/scss/layout/_header.scss
+++ b/src/assets/scss/layout/_header.scss
@@ -3,21 +3,50 @@
     width: 40px;
 }
 
-.has-search .form-control {
-    padding-left: 40px;
-    width: 250px;
-}
+// .has-search .form-control {
+//     padding-left: 40px;
+//     width: 250px;
+// }
 
-.has-search .form-control-feedback {
-    position: absolute;
-    z-index: 2;
-    display: block;
+// .has-search .form-control-feedback {
+//     position: absolute;
+//     z-index: 2;
+//     display: block;
+//     width: 38px;
+//     height: 38px;
+//     line-height: 38px;
+//     text-align: center;
+//     pointer-events: none;
+//     color: #aaa;
+// }
+.search{
+    border-radius: 8px;
+    border: 1px solid #ccc;
+}
+.bi {
     width: 38px;
     height: 38px;
-    line-height: 38px;
+    position: relative;
+    right: 30px;
+    font-size: 20px;
+    line-height: 40px;
+    cursor: pointer;
+    z-index: 2;
     text-align: center;
-    pointer-events: none;
+    // pointer-events: none;
+ 
+    
+}
+
+input {
+   
+    height: 25px;
+    padding: 16px;
+    width: 250px;
+    background-color: #9ba0a5;
+    all:unset;
     color: #aaa;
+    border: #010a13;
 }
 
 @media (max-width:766px) {
