--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,4 +1,5 @@
 /* You can add global styles to this file, and also import other style files */
+@import "assets/icons/style.css";
 @import "assets/scss/base/index";
 @import "assets/scss/vendor/bootstrap/index";
 @import "assets/scss/component/index";
