--- a/src/app/core/navbar/header/header.component.html
+++ b/src/app/core/navbar/header/header.component.html
@@ -1,3 +1,4 @@
+<!-- header -->
 <nav class="navbar  bg-white shadow-sm fixed-top ">
     <div class="container">
         <div class="d-flex flex-wrap justify-content-between align-items-center w-100">
@@ -6,75 +7,79 @@
                 <img src="../../../../assets/images/1rhythmlogo.png" alt="">
                 <span class="fs-4 fw-semibold text-dark ms-2 mb-0 logo-text ">1Rhythm</span>
             </a>
+            <!-- menu-icon for responsive -->
             <label for="headerInput" class="d-block d-md-none ">
                 <img src="../../../../assets/images/menu.svg" width="20px" alt="">
             </label>
             <input type="checkbox" class="d-none" id="headerInput">
-            <div class="flex-grow-1 justify-content-between align-items-md-center" id="toggleHeader">
-                <!-- navbar -->
-                <div class="d-flex  mx-md-auto mx-0">
-                    <ul class="nav flex-md-row flex-column ">
+            <div class="flex-grow-1 justify-content-between align-items-md-center" id="toggleHeader" >
+                <!-- nav-list -->
+                <div class="d-flex  mx-md-auto mx-0  " >
+                    <ul class="nav  flex-md-row flex-column nav-list-item">
+                        <!-- nav-item home-->
                         <li class="nav-item">
-                            <a href="" class="nav-link d-flex align-items-center active" routerLink="home">
-                                <img src="../../../../assets/images/Vector.svg" alt="" class="me-2 header-icon ">
-                                <!-- <span class="bi bi-house-door me-2"></span> -->
+                            <!-- nav-link home-->
+                            <a href="" class="nav-link d-flex align-items-center " routerLink="home">
+                                <!-- nav-icon-home-->
+                                <span class="icon-Home me-2 header-icon "></span>
+                                <!-- nav-text-home -->
                                 <span class="nav-text ">Home</span>
                             </a>
                         </li>
+                        <!-- nav-item studio-->
                         <li class="nav-item ">
+                            <!-- nav-link -->
                             <a href="" class="nav-link d-flex align-items-center ">
-                                <img src="../../../../assets/images/Vector (3).svg" alt="" class="me-2 header-icon ">
-                                <!-- <span class="bi bi-vinyl me-2"></span> -->
+                                <!-- nav-icon-studio-->
+                                <span class="icon-Studios me-2 header-icon "></span>
+                                <!-- nav-text-studio -->
                                 <span class="nav-text">Studio</span>
                             </a>
                         </li>
+                        <!-- nav-item artists-->
                         <li class="nav-item ">
+                            <!-- nav-link -->
                             <a href="" class="nav-link d-flex align-items-center ">
-                                <img src="../../../../assets/images/Vector (1).svg" alt="" class="me-2 header-icon">
-                                <!-- <span class="bi bi-person me-2"></span> -->
+                                <!-- nav-icon-artists-->
+                                <span class="icon-Group me-2 header-icon "></span>
+                                <!-- nav-text-artists -->
                                 <span class="nav-text">Artists</span>
                             </a>
                         </li>
+                        <!-- nav-item booking history-->
                         <li class="nav-item ">
+                            <!-- nav-link -->
                             <a href="" class="nav-link d-flex align-items-center ">
-                                <img src="../../../../assets/images/Vector (2).svg" alt="" class="me-2 header-icon">
-                                <!-- <span class="bi bi-calendar me-2"></span> -->
+                                <!-- nav-icon-booking history-->
+                                <span class="icon-Group-1 me-2 header-icon "></span>
+                                <!-- nav-text-booking history -->
                                 <span class="nav-text">Booking History</span>
                             </a>
                         </li>
                     </ul>
                 </div>
                 <!-- profile -->
-                <div class=" d-flex ">
-                    <div class="form-group has-search me-4 search">
-                        <input type="text"  placeholder="Search" class="ms-3 ">
-                        <span class="bi bi-search "></span>
+                <div class=" d-flex align-items-start">
+                    <!-- searchbar -->
+                    <div class="form-group has-search position-relative me-4 ">
+                        <input type="text" placeholder="Search" class="ms-3 search-input">
+                        <span class="bi bi-search search-icon "></span>
                     </div>
-                    <!-- <div class="form-group has-search me-4 dropdown ">
-                        <span class="bi bi-search form-control-feedback"></span>
-                        <input type="text" class="form-control" placeholder="Search">
-                    </div> -->
-                    <!-- <div>
-                        <input type="text">
-                        <i class="fa fa-book"></i>
-                    </div> -->
-
                     <div ngbDropdown display="dynamic" placement="bottom-end" class="d-inline-block ">
-                        <!-- <button type="button" class="btn btn-outline-primary" >
-                        Toggle dropdown
-                    </button> -->
                         <div class="rounded-circle image overflow-hidden " type="button" id="manageProfileDropdown"
                             ngbDropdownToggle>
+                            <!-- profile-image -->
                             <img src="../../../../assets/images/marco-bicca-Z8Rf8EVS2Wc-unsplash 1.png"
-                                class=" img-fluid image " alt="">
+                                class=" img-fluid profile-image " alt="">
                         </div>
                         <div class="border-0 shadow-sm " ngbDropdownMenu aria-labelledby="manageProfileDropdown">
+                            <!-- dropdown-menu -->
                             <li class="item px-3 py-1 ">Username</li>
                             <li class="item px-3 py-1">
                                 <div class="form-switch p-0 d-flex align-items-center justify-content-between">
                                     <label class="form-check-label cursor-pointer"
                                         for="flexSwitchCheckDefault">Available</label>
-                                    <input class="form-check-input m-0" type="checkbox" role="switch"
+                                    <input class="form-check-input m-0 " type="checkbox" role="switch"
                                         id="flexSwitchCheckDefault">
                                 </div>
                             </li>
@@ -85,12 +90,14 @@
                             <li class="item px-3 py-1">
                                 Manage Studio Profile
                             </li>
+                            <li class="item px-3 py-1">Manage Artist Profile</li>
                             <li class="item px-3 py-1">Log Out</li>
                         </div>
                     </div>
 
                 </div>
             </div>
+
         </div>
     </div>
 </nav>
