--- a/src/assets/scss/layout/_header.scss
+++ b/src/assets/scss/layout/_header.scss
@@ -1,69 +1,68 @@
+// dropdown-open-image
 .image {
     height: 40px;
     width: 40px;
+
+// profile-image
+    .profile-image {
+        height: 100%;
+    }
 }
-
-// .has-search .form-control {
-//     padding-left: 40px;
-//     width: 250px;
-// }
-
-// .has-search .form-control-feedback {
-//     position: absolute;
-//     z-index: 2;
-//     display: block;
-//     width: 38px;
-//     height: 38px;
-//     line-height: 38px;
-//     text-align: center;
-//     pointer-events: none;
-//     color: #aaa;
-// }
-.search{
+// search-input of searchbar
+.search-input {
     border-radius: 8px;
     border: 1px solid #ccc;
+    padding: 8px;
+
+
 }
-.bi {
-    width: 38px;
-    height: 38px;
-    position: relative;
-    right: 30px;
+// searchbar-icon
+.search-icon {
+    position: absolute;
+    right: 10px;
     font-size: 20px;
-    line-height: 40px;
     cursor: pointer;
     z-index: 2;
-    text-align: center;
-    // pointer-events: none;
- 
-    
-}
-
-input {
-   
-    height: 25px;
-    padding: 16px;
-    width: 250px;
-    background-color: #9ba0a5;
-    all:unset;
-    color: #aaa;
-    border: #010a13;
-}
-
-@media (max-width:766px) {
-    #toggleHeader {
-        margin-top: 20px;
-    }
-
-    ul {
-        margin-left: -20px;
-
-    }
-
-    .dropdown {
-        margin-top: 8px;
-    }
+    display: flex;
+    bottom: 0;
+    margin: auto;
+    align-items: center;
+    top: 0;
 
 }
+
+
+// navbar ul
+.nav-list .nav-link:hover,
+.nav-list .nav-link.active {
+    background-color: lighten($color: $primary, $amount: 60%);
+    transition: .25s all;
+    font-weight: 500;
+    color: $primary;
+}
+
+.nav-link .header-icon,
+.nav-link .nav-text {
+    color: black;
+
+    &:hover {
+        color: $primary;
+    }
+}
+
+.nav-link {
+
+    &.active,
+    &:hover {
+
+
+        .header-icon,
+        .nav-text {
+            color: $primary;
+        }
+    }
+}
+
 
 .navbar {
     label {
@@ -76,6 +75,7 @@ input {
         @include media-breakpoint-down(md) {
             display: none;
             width: 100%;
+            margin-top: 20px;
         }
 
     }
@@ -89,34 +89,9 @@ input {
     }
 }
 
-.nav-list .nav-link:hover,
-.nav-list .nav-link.active {
-    background-color: lighten($color: $primary, $amount: 60%);
-    transition: .25s all;
-    font-weight: 500;
-    color: $primary;
-}
 
-.nav-link:hover .icon,
-.nav-link:hover .nav-text {
-    color: $primary;
-
-}
-
-.nav-link .icon,
-.nav-link .nav-text {
-    color: black;
-}
-
-.nav-link {
-
-    &.active,
-    &:hover {
-
-
-        .icon,
-        .nav-text {
-            color: $primary;
-        }
+.nav-list-item {
+    @include media-breakpoint-down(md) {
+        margin-left: -10px;
     }
 }
